variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: '(' expected but identifier found.
while pas!=nbpas {
      ^Variables:12: error: illegal start of simple expression
	}
        ^